--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   },
   "scripts": {
     "build": "cd client && npm run build",
+    "client": "npm start --prefix client",
     "install-client": "cd client && npm install",
     "heroku-postbuild": "npm run install-client && npm run build",
     "server": "nodemon server.js",
     "develop": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix client\"",
-    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix client\""
+    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix client\"",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
