--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "heroku-postbuild": "npm run install-client && npm run build",
     "server": "nodemon server.js",
     "develop": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix client\"",
-    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix client\"",
+    "start": "npm run start",
     "dev": "nodemon server.js"
   },
   "repository": {
