--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "heroku-postbuild": "ng build --prod"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
