--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   },
   "homepage": "https://github.com/tashach/care-circle-app#readme",
   "dependencies": {
+    "bootstrap": "^5.3.0-alpha1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.0",
-    "node": "^18.13.0"
+    "node": "^18.13.0",
+    "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
